--- a/design/templates/OpenGame/metamatter.tpl.html
+++ b/design/templates/OpenGame/metamatter.tpl.html
@@ -8,6 +8,69 @@
 <script type="text/javascript">
   var LA_sys_show = "{LA_sys_show}";
   var LA_sys_hide = "{LA_sys_hide}";
+  var exchange_mm_default = parseInt("{C_payment_currency_exchange_mm_}");
+</script>
+
+
+<script type="text/javascript">
+  var mm_discounts = Array();
+  <!-- BEGIN discount -->
+  mm_discounts.push({sum: {discount.SUM}, discount: {discount.DISCOUNT_ONE}});
+  <!-- END discount -->
+</script>
+
+<script type="text/javascript">
+  jQuery(document)
+          .on('keyup change', "#metamatter", function(event, ui) {
+            value = (value = parseInt(jQuery(this).val())) ? value : 0;
+            jQuery(this).val(value);
+
+            current_discount = 1;
+            for(i in mm_discounts) {
+              if(value >= mm_discounts[i]['sum']) {
+                current_discount = mm_discounts[i]['discount'];
+              }
+            }
+            jQuery("#metamatter_total").html(sn_format_number(Math.floor(value * current_discount)));
+            if(current_discount > 1) {
+              jQuery("#metamatter_undiscounted").show().html(sn_format_number(value));
+              jQuery("#metamatter_bonus_percent").show().find('span').html(Math.round(current_discount * 100 - 100));
+            } else {
+              jQuery("#metamatter_undiscounted").hide();
+              jQuery("#metamatter_bonus_percent").hide();
+            }
+
+            jQuery("#metamatter_price").html(sn_format_number(Math.ceil(value / exchange_mm_default * 100) / 100, 2));
+          })
+          .on('focus', "#metamatter", function(event, ui) {
+            if(this.value == '0') this.value='';
+            this.select();
+          })
+          .on('blur', "#metamatter", function(event, ui) {
+            that = jQuery(this);
+            that.val(parseInt(that.val()) ? that.val() : 0);
+          })
+  ;
+
+  jQuery(document).on("click", ".payment_mm_amount", function(){
+    jQuery("#metamatter").val(jQuery(this).attr("value")).change();
+  });
+
+  jQuery(document).on("click", '.payment_mm_method', function(){
+    jQuery("#payment_method").val(jQuery(this).attr("value"));
+    jQuery("#payment_type").val(jQuery(this).parent().attr("value"));
+    jQuery("#payment_form").submit();
+  });
+
+  jQuery(document).on("click", '.payment_mm_module', function(){
+    jQuery("#payment_module").val(jQuery(this).attr("value"));
+    jQuery("#payment_form").submit();
+  });
+
+  jQuery(document).ready(function() {
+    // Натягиваем скины на элементы ввода
+    jQuery('.payment_mm_amount, .payment_mm_method, .payment_mm_module').button().addClass('ui-textfield');
+  });
 </script>
 
 <table width="{$TABLE_WIDTH}">
@@ -24,32 +87,6 @@
       </div>
     </td>
   </tr>
-
-  <!--
-  <tr>
-    <th class="c_l">
-      {L_sys_metamatter_description_header}
-      <span class="fr link_action" onclick="sn_show_hide(this, 'dark_matter_usage');">[ {L_sys_show} ]</span>
-    </th>
-  </tr>
-  <tr class="c_j" id="dark_matter_usage" style="display: none;">
-    <td>
-      {L_sys_metamatter_description_text}
-     </td>
-  </tr>
-
-  <tr class="c_j">
-    <th>
-      {L_sys_metamatter_obtain_header}
-      <span class="fr link_action" onclick="sn_show_hide(this, 'dark_matter_obtain');">[ {L_sys_show} ]</span>
-    </th>
-  </tr>
-  <tr class="c_j" id="dark_matter_obtain" style="display: none;">
-    <td>
-      {L_sys_metamatter_obtain_text}
-    </td>
-  </tr>
-  -->
 
   <tr class="c_j">
     <th>
@@ -84,36 +121,46 @@
 
       <!-- IF .exchange -->
       <br />
-      {L_pay_currency_exchange_title}
-      <span class="fr link_action" onclick="sn_show_hide(this, 'currency_exchange');">[ {L_sys_show} ]</span><br />
-      <div id="currency_exchange" style="display: none;">
-        <table width="100%">
-          <tr>
-            <th>{L_pay_currency_name}</th>
-            <th>{L_pay_currency_symbol}</th>
-            <th>{L_pay_currency_exchange_direct}</th>
-            <th>{L_pay_currency_exchange_reverse}</th>
-            <th>{L_pay_currency_exchange_mm}</th>
-          </tr>
-          <!-- BEGIN exchange -->
-          <tr>
-            <td>{exchange.TEXT}</td>
-            <td>{exchange.SYMBOL}</td>
-            <td class="c_r">{exchange.COURSE_DIRECT}</td>
-            <td class="c_r">{exchange.COURSE_REVERSE}</td>
-            <td class="c_r">{exchange.MM_PER_CURRENCY}</td>
-            <!--<td class="c_r">{exchange.UNIT_PER_LOT}</td>-->
-          </tr>
-          <!-- END exchange -->
-        </table>
-        <span class="note">{L_pay_currency_exchange_note}
-      </div>
+      <table class="markup" width="100%">
+        <tr>
+          <td>{L_pay_currency_exchange_title}</td>
+          <td class="c_r"><span class="link_action" onclick="sn_show_hide(this, 'currency_exchange');">[ {L_sys_show} ]</span></td>
+        </tr>
+        <tr id="currency_exchange" style="display: none;">
+          <td colspan="2" class="c_j">
+            <table width="100%">
+              <tr class="c_c">
+                <th rowspan="2">{L_pay_currency_name}</th>
+                <th rowspan="2">{L_pay_currency_exchange_mm}</th>
+                <th colspan="2">{L_pay_currency_exchange_rate}</th>
+              </tr>
+              <tr class="c_c">
+                <th>{L_pay_currency_exchange_direct}</th>
+                <th>{L_pay_currency_exchange_reverse}</th>
+              </tr>
+              <!-- BEGIN exchange -->
+              <tr>
+                <td>{exchange.TEXT} ({exchange.SYMBOL})</td>
+                <td class="c_r">{exchange.MM_PER_CURRENCY}</td>
+                <td class="c_r">{exchange.COURSE_DIRECT}</td>
+                <td class="c_r">{exchange.COURSE_REVERSE}</td>
+              </tr>
+              <!-- END exchange -->
+            </table>
+            <div class="note">{L_pay_currency_exchange_note}</div>
+          </td>
+        </tr>
+      </table>
       <!-- ENDIF -->
 
       <!-- IF .discount -->
       <br />
-      {L_pay_mm_bonus}
-      <span class="fr link_action" onclick="sn_show_hide(this, 'bonuses');">[ {L_sys_show} ]</span>
+      <table class="markup" width="100%">
+        <tr>
+          <td>{L_pay_mm_bonus}</td>
+          <td class="c_r"><span class="link_action" onclick="sn_show_hide(this, 'bonuses');">[ {L_sys_show} ]</span></td>
+        </tr>
+      </table>
       <ul id="bonuses" style="display: none;">
         <!-- BEGIN discount -->
         <li>{discount.TEXT}</li>
@@ -132,61 +179,115 @@
     <td>
       <!-- IF .payment_module -->
         <!-- IF ! PAY_LINK_URL -->
-          <form action="{D_SN_ROOT_VIRTUAL}metamatter.php" method="POST">
+        <form action="{D_SN_ROOT_VIRTUAL}metamatter.php" method="POST" id="payment_form">
         <!-- ELSEIF PAY_LINK_METHOD == 'GET' || PAY_LINK_METHOD == 'POST' -->
-          <form action="{PAY_LINK_URL}" method="{PAY_LINK_METHOD}">
+        <form action="{PAY_LINK_URL}" method="{PAY_LINK_METHOD}" id="payment_form">
         <!-- ELSEIF PAY_LINK_METHOD == 'LINK' -->
-          <form action="" method="">
+        <form action="" method="" id="payment_form">
         <!-- ENDIF -->
 
         <!-- IF ! UNIT_AMOUNT -->
-          <span class="notice">{L_pay_mm_buy_step1_text}</span>
-          <br />
-          <br/>
-          {L_sys_buy}
-          <select name="metamatter" dir="rtl">
+          {L_pay_mm_buy_metamatter_amount}
+          <div style="width: 100%; text-align: center;">
             <!-- BEGIN mm_amount -->
-              <option dir="ltr" value="{mm_amount.VALUE}"<!-- IF mm_amount.VALUE == UNIT_AMOUNT --> selected<!-- ENDIF -->>{mm_amount.TEXT}</value>
-            <!-- END mm_amount -->
-          </select>
-          {L_pay_mm_buy_unit}
-        <!-- ELSE -->
-          <input type="hidden" name="metamatter" id="payment_amount" value="{UNIT_AMOUNT}">
-          {L_sys_buy} {UNIT_AMOUNT_TEXT} {L_pay_mm_buy_unit}
-          <br />
-          <br />
-
-          <!-- IF ! PAYMENT_MODULE -->
-            {L_pay_mm_buy_select}
-            <select name="payment_module">
-              <!-- BEGIN payment_module -->
-              <option value="{payment_module.ID}">{payment_module.NAME}</option>
-              <!-- END payment_module -->
-            </select>
-          <!-- ELSE -->
-            <input type="hidden" name="payment_module" id="payment_module" value="{PAYMENT_MODULE}">
-            {L_pay_mm_buy_payment_selected} <span class="ok">"{PAYMENT_MODULE_NAME}"</span><br /><br />
-
-            <!-- BEGIN pay_link_data -->
-              <input type="hidden" name="{pay_link_data.FIELD}" value="{pay_link_data.VALUE}">
-            <!-- END pay_link_data -->
-
-            <!-- BEGIN render -->
-              <!-- IF render.TYPE == 'select' -->
-                <select name="{render.NAME}">
-                  <!-- BEGIN value -->
-                    <option value="{render.value.FIELD}">{render.value.VALUE}</option>
-                  <!-- END value -->
-                </select>
+            <div class="payment_mm_amount" value="{mm_amount.VALUE}">
+              <!-- IF mm_amount.DISCOUNT -->
+                <del class="negative">{mm_amount.TEXT}</del><br />
+                <span class="positive">{mm_amount.TEXT_DISCOUNTED} {L_pay_mm_bonus_text} {mm_amount.DISCOUNT_PERCENT}%</span>
               <!-- ELSE -->
-                {render.VALUE}
+                <span class="positive">{mm_amount.TEXT}</span>
               <!-- ENDIF -->
-            <!-- END render -->
-
-            <!-- IF PAY_LINK_URL -->
-              {C_adv_conversion_code_payment}<br />
               <br />
-              <span class="notice">{L_pay_mm_buy_step2_text}</span>
+              {L_pay_mm_buy_unit}
+            </div>
+            <!-- END mm_amount -->
+          </div>
+          <div style="clear:both;"></div>
+          <br />
+
+          {L_pay_mm_buy_metamatter_amount_enter} <input type="text" name="metamatter" id="metamatter" value="0" style="width: 100px;" maxlength="8" /><br />
+          {L_pay_mm_buy_price_for} <del class="negative"><span class="hide" id="metamatter_undiscounted">0</span></del>
+          <span class="positive" ><span id="metamatter_total">0</span><span class="hide" id="metamatter_bonus_percent"> ({L_pay_mm_bonus_text} <span>0</span>%)</span></span> {L_pay_mm_buy_unit}
+          <span class="neutral"><span id="metamatter_price">0,00</span> {C_payment_currency_default}</span>
+          <br />
+          <br />
+        <!-- ELSE -->
+          <input type="hidden" name="metamatter" id="payment_amount" value="{UNIT_AMOUNT}" />
+          {L_pay_mm_buy_purchase}
+          <!-- IF UNIT_AMOUNT_BONUS_PERCENT -->
+          <span class="negative"><del>{UNIT_AMOUNT_TEXT}</del></span>
+          <span class="positive">{UNIT_AMOUNT_TEXT_DISCOUNTED} ({L_pay_mm_bonus_text} {UNIT_AMOUNT_BONUS_PERCENT}%)</span>
+          <!-- ELSE -->
+          <span class="positive">{UNIT_AMOUNT_TEXT_DISCOUNTED}</span>
+          <!-- ENDIF -->
+          {L_pay_mm_buy_unit}
+          <br />
+          <br />
+
+          <input type="hidden" name="payment_type" id="payment_type" value="{PAYMENT_TYPE}" />
+          <input type="hidden" name="payment_method" id="payment_method" value="{PAYMENT_METHOD}" />
+          <!-- IF ! PAYMENT_METHOD -->
+            {L_pay_mm_buy_payment_method_select}
+            <!-- BEGIN payment -->
+            <table align="left" width="100%">
+              <tr>
+                <th class="c_l">{payment.NAME}</th>
+              </tr>
+              <tr><td class="c_l">
+                <div style="width: 100%; text-align: center;" value="{payment.ID}">
+                <!-- BEGIN method -->
+                  <div class="payment_mm_method" value="{method.ID}">
+                    {method.NAME}
+                  </div>
+                <!-- END method -->
+                </div>
+                <div style="clear:both;"></div>
+              </td></tr>
+            </table>
+            <!-- END payment -->
+          <!-- ELSE -->
+            {L_pay_mm_buy_payment_method_selected} <span class="positive">{PAYMENT_METHOD_NAME}</span><br /><br />
+
+            <input type="hidden" name="payment_module" id="payment_module" value="{PAYMENT_MODULE}">
+            <!-- IF ! PAYMENT_MODULE -->
+              {L_pay_mm_buy_select}
+              <div style="width: 100%; text-align: center;" value="{payment.ID}">
+                <!-- BEGIN payment_module -->
+                <div class="payment_mm_module" value="{payment_module.ID}">
+                  {payment_module.NAME}
+                </div>
+              <!-- END payment_module -->
+              </div>
+              <div style="clear:both;"></div>
+              <span class="neutral">{L_pay_mm_buy_method_detail}</span>
+            <!-- ELSE -->
+              {L_pay_mm_buy_payment_selected} <span class="ok">"{PAYMENT_MODULE_NAME}"</span><br /><br />
+
+              <!-- BEGIN pay_link_data -->
+                <input type="hidden" name="{pay_link_data.FIELD}" value="{pay_link_data.VALUE}">
+              <!-- END pay_link_data -->
+
+              <!-- BEGIN render -->
+                <!-- IF render.TYPE == 'select' -->
+                  <select name="{render.NAME}">
+                    <!-- BEGIN value -->
+                      <option value="{render.value.FIELD}">{render.value.VALUE}</option>
+                    <!-- END value -->
+                  </select>
+                <!-- ELSE -->
+                  {render.VALUE}
+                <!-- ENDIF -->
+              <!-- END render -->
+
+              <!-- IF PAY_LINK_URL -->
+                {METAMATTER_COST_TEXT}
+                <!-- IF UNIT_AMOUNT_BONUS_PERCENT -->
+                <br />{METAMATTER_COST_BONUS_TEXT}
+                <!-- ENDIF -->
+                {C_adv_conversion_code_payment}<br />
+                <br />
+                <span class="notice">{L_pay_mm_buy_step2_text}</span>
+              <!-- ENDIF -->
             <!-- ENDIF -->
           <!-- ENDIF -->
         <!-- ENDIF -->
@@ -204,13 +305,10 @@
                 $('<span id="psload" class="fl">{LA_pay_mm_buy_in_progress}</span>').insertAfter(ob);
                 var win = window.open('{PAY_LINK_URL}', 'PayStation', 'width=850px, height=550px, scrollbars=yes, status=no');
                 setTimeout(function () {
-                  if(win.closed)
-                  {
+                  if(win.closed) {
                     $('#psload').remove();
                     $(ob).show();
-                  }
-                  else
-                  {
+                  } else {
                     setTimeout(arguments.callee,500);
                   }
                 }, 500);
