REF-misc-39a14.7: Now game name used in text link generation

--- a/design/templates/OpenGame/affilates.tpl.html
+++ b/design/templates/OpenGame/affilates.tpl.html
@@ -8,10 +8,10 @@
   <tr><th>
     <h2>{L_aff_link}</h2>
     {L_aff_link_bb}<br>
-    <input name="htmlbbcode" type="text" id="htmlbbcode" value="[url={D_SN_ROOT_VIRTUAL_PARENT}login.php?id_ref={user_id}#tab_register]{D_SN_ROOT_VIRTUAL_PARENT}[/url]" size="80" /><br /><br />
+    <input name="htmlbbcode" type="text" id="htmlbbcode" value="[url={D_SN_ROOT_VIRTUAL_PARENT}login.php?id_ref={user_id}#tab_register]{C_game_name}[/url]" size="80" /><br /><br />
 
     {L_aff_link_html}<br>
-    <input name="htmllink" type="text" id="htmllink" value="<a href={D_SN_ROOT_VIRTUAL_PARENT}login.php?id_ref={user_id}#tab_register>{D_SN_ROOT_VIRTUAL_PARENT}</a>" size="80">
+    <input name="htmllink" type="text" id="htmllink" value="<a href={D_SN_ROOT_VIRTUAL_PARENT}login.php?id_ref={user_id}#tab_register>{C_game_name}</a>" size="80">
   </th></tr>
   <tr><th>
     <h2>{L_aff_banner}</h2>
