--- a/design/css/global.css
+++ b/design/css/global.css
@@ -759,3 +759,47 @@ input[type=text].ui-textfield:hover, input[type=password].ui-textfield, input[ty
 .payment_mm_method {
   height: 4em;
 }
+
+.i_icon_mail, .i_icon_mail_userlist {
+  background-image: url(../images/mail.gif);
+  background-size: contain;
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+}
+
+.i_icon_delete_userlist {
+  background-image: url(../images/r1.png);
+  background-size: contain;
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+}
+
+.i_icon_impers_userlist {
+  background-image: url(../images/icon_impersonate.gif);
+  background-size: contain;
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+}
+
+#user_list {
+  white-space: nowrap;
+}
+
+#user_list th {
+  text-align: center;
+}
+
+#user_list tr td:first-child, #user_list tr td:nth-child(3) {
+  text-align: right;
+}
+
+#user_list tr td:first-child, #user_list tr td:nth-child(2) {
+  cursor: pointer;
+}
+
+#user_list tr td:first-child:hover, #user_list tr td:nth-child(2):hover {
+  background-color: yellow;
+}
