--- a/design/templates/OpenGame/admin/userlist.tpl.html
+++ b/design/templates/OpenGame/admin/userlist.tpl.html
@@ -1,47 +1,63 @@
-<h2>{L_adm_ul_title}</h2>
+<h2>{L_adm_ul_title} ({USER_COUNT})</h2>
 
-<table>
-  <tr>
-    <th class="c_c" rowspan="2"><a href="admin/userlist.php?sort={D_SORT_ID}">{L_sys_id}</a></th>
-    <th class="c_c" rowspan="2"><a href="admin/userlist.php?sort={D_SORT_NAME}">{L_sys_user_name}</a></th>
+<table id="user_list">
+  <tr class="c_c">
+    <th rowspan="2"><a href="admin/userlist.php?sort={D_SORT_ID}">{L_sys_id}</a></th>
+    <th rowspan="2"><a href="admin/userlist.php?sort={D_SORT_NAME}">{L_sys_user_name}</a></th>
+    <!-- IF METAMATTER -->
+    <th rowspan="2">{L_sys_metamatter_sh}</th>
+    <!-- ENDIF -->
+    <th colspan="2">{L_adm_ul_referral}</th>
+    <th rowspan="2"><a href="admin/userlist.php?sort={D_SORT_TIME_REGISTERED}">{L_adm_ul_time_registered}</a></th>
+    <th rowspan="2"><a href="admin/userlist.php?sort={D_SORT_TIME_LAST_VISIT}">{L_adm_ul_time_played}</a></th>
+    <th rowspan="2">{L_adm_ov_activ}</th>
+    <th rowspan="2"><a href="admin/userlist.php?sort={D_SORT_TIME_BAN_UNTIL}">{L_adm_ul_time_banned}</a></th>
     <!-- IF ! RESTRICTED -->
-    <th class="c_c" rowspan="2"><a href="admin/userlist.php?sort={D_SORT_EMAIL}">{L_sys_email}</a></th>
-    <th class="c_c" rowspan="2"><a href="admin/userlist.php?sort={D_SORT_IP}">{L_sys_ip}</a></th>
+    <th rowspan="2"><a href="admin/userlist.php?sort={D_SORT_IP}">{L_sys_ip}</a></th>
     <!-- IF GEOIP -->
-    <th class="c_c" rowspan="2">{L_geoip}</th>
+    <th rowspan="2">{L_geoip}</th>
     <!-- ENDIF -->
     <!-- ENDIF -->
-    <th class="c_c" rowspan="2"><a href="admin/userlist.php?sort={D_SORT_TIME_REGISTERED}">{L_adm_ul_time_registered}</a></th>
-    <th class="c_c" rowspan="2"><a href="admin/userlist.php?sort={D_SORT_TIME_LAST_VISIT}">{L_adm_ul_time_played}</a></th>
-    <th class="c_c" rowspan="2"><a href="admin/userlist.php?sort={D_SORT_TIME_BAN_UNTIL}">{L_adm_ul_time_banned}</a></th>
-    <th class="c_c" colspan="2">{L_adm_ul_referral}</th>
-    <th class="c_c" rowspan="2">{L_adm_sys_actions}</th>
+    <th rowspan="2">{L_adm_sys_actions}</th>
   </tr>
 
-  <tr>
-    <th class="c_c"><a href="admin/userlist.php?sort={D_SORT_REFERRAL_COUNT}">{L_adm_ul_players}</a></th>
-    <th class="c_c"><a href="admin/userlist.php?sort={D_SORT_REFERRAL_DM}">{L_adm_ul_dms}</a></th>
+  <tr class="c_c">
+    <th><a href="admin/userlist.php?sort={D_SORT_REFERRAL_COUNT}">{L_adm_ul_players}</a></th>
+    <th><a href="admin/userlist.php?sort={D_SORT_REFERRAL_DM}">{L_adm_ul_dms}</a></th>
   </tr>
+
+  <script type="text/javascript">
+    jQuery(document).on('click', '.i_icon_mail_userlist', function(){
+      document.location = "messages.php?mode=write&id=" + jQuery(this).parent().parent().attr('uid');
+    });
+
+    jQuery(document).on('click', '.i_icon_delete_userlist', function(){
+      if(confirm('!{LA_adm_ul_delete_confirm} ' + jQuery(this).parent().parent().attr('uname'))) {
+        document.location = "admin/userlist.php?sort={SORT}&action={D_ACTION_DELETE}&uid=" + jQuery(this).parent().parent().attr('uid');
+      }
+    });
+
+    jQuery(document).on('click', '.i_icon_impers_userlist', function(){
+      document.location = "admin/userlist.php?sort={SORT}&action={D_ACTION_USE}&uid=" + jQuery(this).parent().parent().attr('uid');
+    });
+
+    jQuery(document).on('click', '#user_list tr td:first-child, #user_list tr td:nth-child(2)', function(){
+      document.location = "admin/admin_user.php?uid=" + jQuery(this).parent().attr('uid');
+    });
+  </script>
 
   <!-- BEGIN user -->
-  <tr>
+  <tr uid="{user.ID}" uname="{user.NAME_HTML}">
     <td>{user.ID}</td>
     <td>{user.NAME}</td>
-    <!-- IF ! RESTRICTED -->
-    <td>{user.EMAIL}</td>
-    <td>
-      <!-- IF user.IP_MULTI -->
-        <span class="error">{user.IP} ({user.IP_MULTI})</span>
-      <!-- ELSE -->
-        {user.IP}
-      <!-- ENDIF -->
-    </td>
-    <!-- IF GEOIP -->
-    <th>{user.COUNTRY}</th>
+    <!-- IF METAMATTER -->
+    <td>{user.METAMATTER}</td>
     <!-- ENDIF -->
-    <!-- ENDIF -->
+    <td class="c_r">{user.REFERRAL_COUNT}</td>
+    <td class="c_r">{user.REFERRAL_DM}</td>
     <td>{user.TIME_REGISTERED}</td>
     <td>{user.TIME_PLAYED}</td>
+    <td>{user.ACTIVITY}</td>
     <td>
       <a href="admin/banned.php?name={user.NAME}">
       <!-- IF user.BANNED -->
@@ -52,20 +68,27 @@
       </a>
     </td>
 
-    <td>{user.REFERRAL_COUNT}</td>
-    <td>{user.REFERRAL_DM}</td>
+
+    <!-- IF ! RESTRICTED -->
+    <td>
+      <!-- IF user.IP_MULTI -->
+      <span class="error">{user.IP} ({user.IP_MULTI})</span>
+      <!-- ELSE -->
+      {user.IP}
+      <!-- ENDIF -->
+    </td>
+    <!-- IF GEOIP -->
+    <th>{user.COUNTRY}</th>
+    <!-- ENDIF -->
+    <!-- ENDIF -->
 
     <td>
-      <a href="messages.php?mode=write&id={user.ID}"><img src="design/images/mail.gif" alt="{L_adm_sys_write_message}" title="{L_adm_sys_write_message}" border="0"></a>
+      <div class="i_icon_mail_userlist"></div>
       <!-- IF user.ACTION -->
-      <a href="admin/userlist.php?sort={SORT}&uid={user.ID}&action={D_ACTION_DELETE}" onclick="return confirm('{L_adm_ul_delete_confirm} {user.NAME_JS}');"><img src="design/images/r1.png" alt="{L_adm_sys_delete_user}" title="{L_adm_sys_delete_user}" ></a>
-      <a href="admin/userlist.php?sort={SORT}&uid={user.ID}&action={D_ACTION_USE}"><img src="design/images/icon_impersonate.gif" alt="{L_sys_impersonate}" title="{L_sys_impersonate}" border="0"></a>
+      <div class="i_icon_delete_userlist"></div>
+      <div class="i_icon_impers_userlist"></div>
       <!-- ENDIF -->
     </td>
   </tr>
   <!-- END user -->
-
-  <tr>
-    <td colspan="9">{adm_ul_count}{adm_ul_playe}</td>
-  </tr>
 </table>
