--- a/design/templates/OpenGame/metamatter.tpl.html
+++ b/design/templates/OpenGame/metamatter.tpl.html
@@ -179,7 +179,7 @@
   </tr>
   <tr class="c_j">
     <td>
-      <!-- IF .payment_module -->
+      <!-- IF .payment -->
         <!-- IF ! PAY_LINK_URL -->
         <form action="{D_SN_ROOT_VIRTUAL}metamatter.php" method="POST" id="payment_form">
         <!-- ELSEIF PAY_LINK_METHOD == 'GET' || PAY_LINK_METHOD == 'POST' -->
@@ -240,6 +240,13 @@
               <tr><td class="c_l">
                 <div style="width: 100%; text-align: center;" value="{payment.ID}">
                 <!-- BEGIN method -->
+                  <!-- IF method.S_ROW_COUNT == 6 -->
+                  <div>
+                    {L_pay_mm_buy_payment_method_more}
+                    <span class="link_action fr" onclick="sn_show_hide(this, 'hide_payment_id_{payment.ID}');">[ {L_sys_show} ]</span>
+                  </div>
+                  <div id="hide_payment_id_{payment.ID}" style="display: none; clear: both;">
+                  <!-- ENDIF -->
                   <div class="payment_mm_method<!-- IF method.IMAGE && ! method.BUTTON--> payment_mm_method_nobutton<!-- ENDIF -->" value="{method.ID}">
                     <!-- IF method.IMAGE -->
                     <img src="{method.IMAGE}" />
@@ -248,6 +255,10 @@
                     <div>{method.NAME}</div>
                     <!-- ENDIF -->
                   </div>
+                  <!-- IF method.S_ROW_COUNT >= 6 && method.S_LAST_ROW -->
+                  </div>
+                  <!-- ENDIF -->
+
                 <!-- END method -->
                 </div>
                 <div style="clear:both;"></div>
