--- a/design/css/global.css
+++ b/design/css/global.css
@@ -903,7 +903,7 @@ input[type=text].ui-textfield:hover, input[type=password].ui-textfield, input[ty
   max-width: 280px;
 }
 #chat_message_smiles2 {
-  max-width: 534px;
+  max-width: 380px;
 }
 #chat_command_menu {
   max-width: 360px;
@@ -925,9 +925,25 @@ input[type=text].ui-textfield:hover, input[type=password].ui-textfield, input[ty
   display: inline-block;
 }
 #chat_message_smiles2 div {
-  width: 60px;
-  height: 60px;
+  width: 54px;
+  height: 54px;
+
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
+#chat_message_smiles2 div img {
+/*  display: inline-block;*/
+  position: relative;
+  top: 50%;
+  -ms-transform: translateY(-51%);
+  -webkit-transform: translateY(-51%);
+  -o-transform: translateY(-51%);
+  -moz-transform: translateY(-51%);
+  transform: translateY(-51%);
+}
+
+
 #chat_command_menu div:not(:first-child):not(:last-child) {
   width: 80px;
 }
